--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-sentinelsat==1.1.1
-pandas==1.5.3
-scikit-image==0.20.0
+black==23.3.0
+flake8==6.0.0
 matplotlib==3.7.1
-rasterio==
 natsort==8.3.1
+pandas==1.5.3
+pre-commit==3.3.1
+rasterio==1.3.6
+scikit-image==0.20.0
+sentinelsat==1.1.1
