--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@ matplotlib==3.7.1
 natsort==8.3.1
 fire==0.5.0
 pandas==1.5.3
+openpyxl==3.1.2
 pre-commit==3.3.1
 geopandas==0.12.2
 rasterio==1.3.6
 scikit-image==0.20.0
+scikit-learn==1.2.2
 sentinelsat==1.1.1
 jinja2==3.1.2
